--- a/index.html
+++ b/index.html
@@ -284,6 +284,76 @@
 				</div>
 			</div>
 		</div>
+		<div class="recipes">
+			<div class="recipes__container">
+					<div class="recipes__title title-block">
+						<h2 class="title-block__title">RECIPES</h2>
+						<p class="title-block__sub-title">Recipes From Our Chefs</p>
+					</div>
+					<div class="recipes__blocks">
+						<div class="recipes__main">
+							<a class="recipes__main-point" href="#"></a>
+							<div class="recipes__main-card">
+								<h2 class="recipes__main-title">
+									breakfast
+								</h2>
+								<div class="recipes__main-date">05 Jul 2016</div>
+								<div class="recipes__main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+								<div class="recipes__main-chef">Jason Keller</div>
+								<div class="recipes__main-views views-block">
+									<div class="views-block__followers">275</div>
+									<div class="views-block__comments">12</div>
+								</div>
+							</div>
+						</div>
+						<div class="recipes__asside">
+							<div class="recipes__asside-cards">
+								<div class="recipes__asside-card">
+									<p class="recipes__asside-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut</p>
+									<div class="recipes__asside-info">
+										<div class="recipes__asside-date-type">
+											<h2 class="recipes__asside-type">lunch</h2>
+											<p class="recipes__asside-date">07 Jan 2016</p>
+										</div>
+										<div class="recipes__asside-views views-block">
+											<div class="views-block__followers">275</div>
+											<div class="views-block__comments">12</div>
+										</div>
+									</div>
+								</div>
+								<div class="recipes__asside-card">
+									<p class="recipes__asside-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+									aliqua</p>
+									<img class="recipes__asside-card-bg" src="./img/recipeс/img/dish.png" alt="bg">
+									<div class="recipes__asside-info">
+										<div class="recipes__asside-date-type">
+											<h2 class="recipes__asside-type">dinner</h2>
+											<p class="recipes__asside-date">07 Jan 2016</p>
+										</div>
+										<div class="recipes__asside-views views-block">
+											<div class="views-block__followers">275</div>
+											<div class="views-block__comments">12</div>
+										</div>
+									</div>
+								</div>
+								<div class="recipes__asside-card">
+									<p class="recipes__asside-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+									<div class="recipes__asside-info">
+										<div class="recipes__asside-date-type">
+											<h2 class="recipes__asside-type">sweets</h2>
+											<p class="recipes__asside-date">07 Jan 2016</p>
+										</div>
+										<div class="recipes__asside-views views-block">
+											<div class="views-block__followers">275</div>
+											<div class="views-block__comments">12</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+			</div>
+		</div>
 	</div>
 	</div>
 </body>
